<resources>
    <string name="app_name">Elementarz</string>
    <string name="action_settings">Settings</string>
    <string name="numbersLbl">Numbers</string>
    <string name="wordsLbl">Words</string>
    <string name="title_activity_numbers">NumbersActivity</string>
    <string name="title_activity_words">WordsActivity</string>
    <string name="title_activity_numbers_bricks">NumbersBricksActivity</string>
    <string name="minusSgn">-</string>
    <string name="currentValueLbl">0</string>
    <string name="numbersBricksLbl">Bricks</string>
    <string name="numbersCompareLbl">Compare</string>
    <string name="title_activity_numbers_compare">NumbersCompareActivity</string>
    <string name="plusSgn">+</string>
    <string name="order">Order</string>
    <string name="title_activity_numbers_order">NumbersOrderActivity</string>
    <string name="compareCheck">Compare check</string>
    <string name="title_activity_numbers_compare_check">NumbersCompareCheckActivity</string>
    <string name="title_activity_numbers_bricks_adding">NumbersBricksAdding</string>
    <string name="adding_bricks">Adding</string>
    <string name="equalSgn">=</string>
    <string name="title_activity_adding_check">AddingCheckActivity</string>
    <string name="adding_check_bricks">Adding check</string>
    <string name="title_activity_choice">ChoiceActivity</string>
    <string name="title_activity_choice_check">ChoiceCheckActivity</string>
    <string name="choice">Choice</string>
    <string name="choice_check">Choice check</string>
    <string name="zero">0</string>
    <string name="numbersPracticeLbl">Numbers practice</string>
    <string name="title_activity_numbers_practice">NumbersPracticeActivity</string>
    <string name="numbersTestLbl">Numbers test</string>
    <string name="title_activity_numbers_test">NumbersTestActivity</string>
    <string name="I_class">I</string>
    <string name="II_class">II</string>
    <string name="III_class">III</string>
    <string name="title_activity_numbers_result">NumbersResultActivity</string>
    <string name="numbersCustomLbl">Numbers custom</string>
    <string name="title_activity_numbers_custom">NumbersCustomActivity</string>
    <string name="timeAnswer">time</string>
    <string name="badAnswer">bad answer</string>
    <string name="goodAnswer">good answer</string>
    <string name="temp">Not implemented yet</string>
    <string name="subtractionLbl">Subtraction</string>
    <string name="subtractionCheckLbl">Subtraction Check</string>
    <string name="title_activity_subtraction">SubtractionActivity</string>
    <string name="title_activity_subtraction_check">SubtractionCheckActivity</string>
</resources>
