<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.numbers.mainly.NumbersActivity"
    tools:showIn="@layout/activity_numbers">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numbersBricksLbl"
        android:id="@+id/bricksBtn"
        android:onClick="onClickNumbers"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numbersCompareLbl"
        android:id="@+id/compareBtn"
        android:onClick="onClickNumbers"
        android:layout_below="@+id/choiceBtn"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:id="@+id/orderBtn"
        android:onClick="onClickNumbers"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/bricksBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compareCheck"
        android:id="@+id/compareCheckBtn"
        android:onClick="onClickNumbers"
        android:layout_alignTop="@+id/compareBtn"
        android:layout_toEndOf="@+id/compareBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adding_bricks"
        android:id="@+id/addingBricksBtn"
        android:onClick="onClickNumbers"
        android:layout_below="@+id/compareBtn"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adding_check_bricks"
        android:id="@+id/addingCheckBtn"
        android:onClick="onClickNumbers"
        android:layout_below="@+id/compareBtn"
        android:layout_toEndOf="@+id/addingBricksBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice"
        android:id="@+id/choiceBtn"
        android:onClick="onClickNumbers"
        android:layout_below="@+id/bricksBtn"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice_check"
        android:id="@+id/choiceCheckBtn"
        android:onClick="onClickNumbers"
        android:layout_below="@+id/orderBtn"
        android:layout_toEndOf="@+id/choiceBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtractionLbl"
        android:id="@+id/subtractionBtn"
        android:onClick="onClickNumbers"
        android:layout_below="@+id/addingBricksBtn"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtractionCheckLbl"
        android:id="@+id/subtractionCheckBtn"
        android:onClick="onClickNumbers"
        android:layout_below="@+id/addingCheckBtn"
        android:layout_toEndOf="@+id/subtractionBtn" />

</RelativeLayout>
