<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.numbers.mainly.NumbersCustomActivity"
    tools:showIn="@layout/activity_numbers_custom">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/doneIV"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_done_black_48dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/app_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goodAnswerET"
        android:hint="@string/goodAnswer"
        android:inputType="number"
        android:layout_above="@+id/badAnswerET"
        android:layout_alignStart="@+id/badAnswerET" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/undoneIV"
        android:layout_below="@+id/doneIV"
        android:src="@drawable/ic_clear_black_48dp"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/app_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/badAnswerET"
        android:hint="@string/badAnswer"
        android:inputType="number"
        android:layout_alignBottom="@+id/undoneIV"
        android:layout_toEndOf="@+id/undoneIV" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeIV"
        android:src="@drawable/ic_access_time_black_48dp"
        android:layout_below="@+id/undoneIV"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/app_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeET"
        android:hint="@string/timeAnswer"
        android:inputType="number"
        android:layout_alignBottom="@+id/timeIV"
        android:layout_toEndOf="@+id/timeIV" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choice"
        android:id="@+id/choiceBTN"
        android:layout_below="@+id/timeET"
        android:layout_alignParentStart="true" />
</RelativeLayout>
