<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.numbers.AddingActivity"
    tools:showIn="@layout/activity_adding"
    android:id="@+id/content_adding">

    <include
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        layout="@layout/stack_bricks_with_tv_layout"
        android:layout_alignParentStart="true"
        android:id="@+id/includeFirstStack"
        android:layout_below="@+id/stars"
        android:layout_marginBottom="@dimen/fab_margin" />

    <include
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        layout="@layout/stack_bricks_with_tv_layout"
        android:id="@+id/includeSecondStack"
        android:layout_toEndOf="@+id/plusTV"
        android:layout_below="@+id/stars"
        android:layout_marginBottom="@dimen/fab_margin" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/stack_bricks_with_tv_layout"
        android:id="@+id/includeResultStack"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/equalTV"
        android:layout_below="@+id/addingPlusBtn"
        android:layout_marginBottom="@dimen/fab_margin" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/stars_layout"
        android:id="@+id/stars"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plusSgn"
        android:id="@+id/addingPlusBtn"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/includeResultStack" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minusSgn"
        android:id="@+id/addingMinusBtn"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/addingPlusBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plusSgn"
        android:id="@+id/plusTV"
        android:layout_alignBottom="@+id/includeSecondStack"
        android:layout_toEndOf="@+id/includeFirstStack" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equalSgn"
        android:id="@+id/equalTV"
        android:layout_alignBaseline="@+id/plusTV"
        android:layout_alignBottom="@+id/plusTV"
        android:layout_toEndOf="@+id/includeSecondStack" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/counter_layout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
