<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.numbers.CompareActivity"
    tools:showIn="@layout/activity_compare"
    android:id="@+id/content_compare">

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/stars_layout"
        android:id="@+id/stars"
        android:layout_above="@+id/includeLeftStack"
        android:layout_centerHorizontal="true" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/stack_bricks_with_tv_layout"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/plusLeftBtn"
        android:id="@+id/includeLeftStack"
        android:layout_toStartOf="@+id/equalTV" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/stack_bricks_with_tv_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/includeRightStack"
        android:layout_below="@+id/minusRightBtn"
        android:layout_toEndOf="@+id/equalTV" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plusSgn"
        android:id="@+id/plusLeftBtn"
        android:onClick="onClickCompareOperations"
        android:layout_above="@+id/includeRightStack"
        android:layout_alignStart="@+id/includeLeftStack" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minusSgn"
        android:id="@+id/minusRightBtn"
        android:onClick="onClickCompareOperations"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/includeRightStack" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minusSgn"
        android:id="@+id/minusLeftBtn"
        android:onClick="onClickCompareOperations"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/plusLeftBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plusSgn"
        android:id="@+id/plusRightBtn"
        android:onClick="onClickCompareOperations"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/minusRightBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equalSgn"
        android:id="@+id/equalTV"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
